fix background cut off issue

--- a/css/wll-login-default.css
+++ b/css/wll-login-default.css
@@ -23,7 +23,7 @@ p {
 .login h1 a {
     -webkit-background-size: 100px;
     background-position: center;
-    background-size: 200px;
+    background-size: 190px;
     height: 200px;
     width: 100%;
     background-repeat: no-repeat;
